Configuración básica de estilos del componente board y carga de la fuente Press 2P. La fuente no se carga bien en el navegador, posiblemente porque el proyecto en local no puede cargarla o encontrarla

--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,8 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <!-- Se importa la fuente Press START 2P, de Google APIs -->
+  <link href="https://fonts.googleapis.com/css?family=Press+Start+2P" rel=”stylesheet” />
 </head>
 <body>
   <app-root></app-root>
